--- a/views/resources/show.ejs
+++ b/views/resources/show.ejs
@@ -22,7 +22,7 @@
                         <input value="EPAYTEST" name="scd" type="hidden">
                         <input value="<%= resource._id %>" name="pid" type="hidden">
                         <!-- <input value="http://merchant.com.np/page/esewa_payment_success?q=su" type="hidden" name="su"> -->
-                        <input value="http://localhost:3000" type="hidden" name="su">
+                        <input value="http://localhost:3000/payment" type="hidden" name="su">
                         <!-- <input value="http://merchant.com.np/page/esewa_payment_failed?q=fu" type="hidden" name="fu"> -->
                         <input value="http://localhost:3000/resources/<%=resource._id%>" type="hidden" name="fu"> 
                         <input value="Buy Now" type="submit">
